--- a/gk.bib
+++ b/gk.bib
@@ -25343,3 +25343,55 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages={821--828},
   year={2003}
 }
+@article{Stoddart65,
+  title={The shape of atolls},
+  author={Stoddart, David R},
+  journal={Marine Geology},
+  volume={3},
+  number={5},
+  pages={369--383},
+  year={1965},
+  publisher={Elsevier}
+}
+@article{Frolov75,
+  title={Measuring the shape of geographical phenomena: A history of the issue},
+  author={Frolov, Yu S},
+  journal={Soviet Geography},
+  volume={16},
+  number={10},
+  pages={676--687},
+  year={1975},
+  publisher={Taylor \& Francis}
+}
+@article{LeeSal70,
+  title={A method of measuring shape},
+  author={Lee, David R and Sallee, G Thomas},
+  journal={Geographical Review},
+  pages={555--563},
+  year={1970},
+  publisher={JSTOR}
+}
+@article{Coulson78,
+  title={`Potential for Variation': A Concept for Measuring the Significance of Variations in Size and Shape of Areal Units},
+  author={Coulson, Michael RC},
+  journal={Geografiska Annaler. Series B. Human Geography},
+  pages={48--64},
+  year={1978},
+  publisher={JSTOR}
+}
+@book{HsuRob70,
+  title={The fidelity of isopleth maps: An experimental study},
+  author={Hsu, Mei-Ling and Robinson, Arthur Howard},
+  year={1970},
+  publisher={U of Minnesota Press}
+}
+@article{Tsai05,
+  title={Quantifying urban form: compactness versus sprawl},
+  author={Tsai, Yu-Hsin},
+  journal={Urban studies},
+  volume={42},
+  number={1},
+  pages={141--161},
+  year={2005},
+  publisher={Sage Publications Sage UK: London, England}
+}
