--- a/gk.bib
+++ b/gk.bib
@@ -25337,21 +25337,24 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @inproceedings{McMLinVan03,
-  title={The national historical geographic information system (NHGIS)},
-  author={McMaster, Robert B and Lindberg, Mark and Van Riper, David},
-  booktitle={Proceedings 21st International Cartographic Conference},
-  pages={821--828},
-  year={2003}
+  title =	 {The national historical geographic information
+                  system (NHGIS)},
+  author =	 {McMaster, Robert B and Lindberg, Mark and Van Riper,
+                  David},
+  booktitle =	 {Proceedings 21st International Cartographic
+                  Conference},
+  pages =	 {821--828},
+  year =	 {2003}
 }
 @article{Stoddart65,
-  title={The shape of atolls},
-  author={Stoddart, David R},
-  journal={Marine Geology},
-  volume={3},
-  number={5},
-  pages={369--383},
-  year={1965},
-  publisher={Elsevier}
+  title =	 {The shape of atolls},
+  author =	 {Stoddart, David R},
+  journal =	 {Marine Geology},
+  volume =	 {3},
+  number =	 {5},
+  pages =	 {369--383},
+  year =	 {1965},
+  publisher =	 {Elsevier}
 }
 @article{Frolov75,
   title={Measuring the shape of geographical phenomena: A history of the issue},
