--- a/gk.bib
+++ b/gk.bib
@@ -25333,12 +25333,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   title={Digital boundary definitions of united states congressional districts, 1789-2012},
   author={Lewis, Jeffrey B and DeVine, Brandon and Pitcher, Lincoln and Martis, Kenneth C},
   journal={Data file and code book},
+  url={cdmaps.polisci.ucla.edu}
   year={2013}
 }
 
 @inproceedings{McMLinVan03,
   title =	 {The national historical geographic information
-                  system (NHGIS)},
+                  system (NHGIS), Version 11.0},
   author =	 {McMaster, Robert B and Lindberg, Mark and Van Riper,
                   David},
   booktitle =	 {Proceedings 21st International Cartographic
@@ -25346,7 +25347,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =	 {821--828},
   year =	 {2003}
 }
-@article{Stoddart65,
+@article{Stoddard65,
   title =	 {The shape of atolls},
   author =	 {Stoddart, David R},
   journal =	 {Marine Geology},
