--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1740,7 +1740,7 @@ pages={1037--1060},
   volume =	 {85},
   year =	 {1990},
   pages =	 {274--282},
-  month =	 {June},
+  month =	 6,
   number =	 {410},
   note =	 {{http://gking.harvard.edu/files/abs/svstat-abs.shtml}}
 }
