--- a/gk.bib
+++ b/gk.bib
@@ -25330,11 +25330,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @article{LewDevPit13,
-  title={Digital boundary definitions of united states congressional districts, 1789-2012},
-  author={Lewis, Jeffrey B and DeVine, Brandon and Pitcher, Lincoln and Martis, Kenneth C},
-  journal={Data file and code book},
-  url={cdmaps.polisci.ucla.edu}
-  year={2013}
+  title =	 {Digital boundary definitions of united states
+                  congressional districts, 1789--2012},
+  author =	 {Jeffrey B Lewis and Brandon DeVine and
+                  Lincoln Pitcher and Kenneth C Martis},
+  journal =	 {Data file and code book},
+  url =		 {cdmaps.polisci.ucla.edu},
+  year =	 {2013}
 }
 
 @inproceedings{McMLinVan03,
