--- a/gk.bib
+++ b/gk.bib
@@ -25329,16 +25329,6 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher={New York}
 }
 
-@article{LewDevPit13,
-  title =	 {Digital boundary definitions of united states
-                  congressional districts, 1789--2012},
-  author =	 {Jeffrey B Lewis and Brandon DeVine and
-                  Lincoln Pitcher and Kenneth C Martis},
-  journal =	 {Data file and code book},
-  url =		 {cdmaps.polisci.ucla.edu},
-  year =	 {2013}
-}
-
 @inproceedings{McMLinVan03,
   title =	 {The national historical geographic information
                   system (NHGIS), Version 11.0},
@@ -25400,4 +25390,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages={141--161},
   year={2005},
   publisher={Sage Publications Sage UK: London, England}
+}
+@article{LewDevPit13,
+  title =	 {Digital boundary definitions of united states
+                  congressional districts, 1789--2012},
+  author =	 {Jeffrey B Lewis and Brandon DeVine and
+                  Lincoln Pitcher and Kenneth C Martis},
+  journal =	 {Data file and code book},
+  url =		 {cdmaps.polisci.ucla.edu},
+  year =	 2013
 }
