--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1544,7 +1544,7 @@ pages={1037--1060},
   volume =	 38,
   year =	 1994,
   pages =	 {514--554},
-  month =	 {May},
+  month =	 5,
   number =	 2,
   note =
                   {{http://gking.harvard.edu/files/abs/writeit-abs.shtml}}
