--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1546,8 +1546,7 @@ pages={1037--1060},
   pages =	 {514--554},
   month =	 5,
   number =	 2,
-  note =
-                  {{http://gking.harvard.edu/files/abs/writeit-abs.shtml}}
+  url =		 {j.mp/unifiedEc}
 }
 
 @article{GelKin94b,
