--- a/gk.bib
+++ b/gk.bib
@@ -25400,3 +25400,17 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   url =		 {cdmaps.polisci.ucla.edu},
   year =	 2013
 }
+@article{LiGooChu13,
+  title =        {An efficient measure of compactness for
+                  two-dimensional shapes and its application in
+                  regionalization problems},
+  author =       {Li, Wenwen and Goodchild, Michael F and Church,
+                  Richard},
+  journal =      {International Journal of Geographical Information
+                  Science},
+  volume =       {27},
+  number =       {6},
+  pages =        {1227--1250},
+  year =         {2013},
+  publisher =    {Taylor \& Francis}
+}
