--- a/gk.bib
+++ b/gk.bib
@@ -25414,3 +25414,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2013},
   publisher =    {Taylor \& Francis}
 }
+@article{Eason92,
+  title =        {Optimization of territory shape in heterogeneous
+                  habitats: a field study of the red-capped cardinal
+                  (Paroaria gularis)},
+  author =       {Eason, Perri},
+  journal =      {Journal of Animal Ecology},
+  pages =        {411--424},
+  year =         {1992},
+  publisher =    {JSTOR}
+}
