--- a/gk.bib
+++ b/gk.bib
@@ -25424,3 +25424,11 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {1992},
   publisher =    {JSTOR}
 }
+@inproceedings{VelMarLis12,
+  title={Making machine learning models interpretable.},
+  author={Vellido, Alfredo and Mart{\'\i}n-Guerrero, Jos{\'e} David and Lisboa, Paulo JG},
+  booktitle={ESANN},
+  volume={12},
+  pages={163--172},
+  year={2012}
+}
