--- a/gk.bib
+++ b/gk.bib
@@ -25426,7 +25426,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 @inproceedings{VelMarLis12,
   title={Making machine learning models interpretable.},
-  author={Vellido, Alfredo and Mart{\'\i}n-Guerrero, Jos{\'e} David and Lisboa, Paulo JG},
+  author={Vellido, Alfredo and Martin-Guerrero, Jose David and Lisboa, Paulo JG},
   booktitle={ESANN},
   volume={12},
   pages={163--172},
