--- a/gk.bib
+++ b/gk.bib
@@ -25432,3 +25432,21 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages={163--172},
   year={2012}
 }
+@article{Polanyi66,
+  title =        {The logic of tacit inference},
+  author =       {Polanyi, Michael},
+  journal =      {Philosophy},
+  volume =       {41},
+  number =       {155},
+  pages =        {1--18},
+  year =         {1966},
+  publisher =    {Cambridge University Press}
+}
+@book{Autor14,
+  title =        {Polanyi's paradox and the shape of employment
+                  growth},
+  author =       {Autor, David},
+  volume =       {20485},
+  year =         {2014},
+  publisher =    {NBER}
+}
