--- a/gk.bib
+++ b/gk.bib
@@ -25450,3 +25450,31 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2014},
   publisher =    {NBER}
 }
+@article{PriGet93,
+  title={Vertical-horizontal illusion: One eye is better than two},
+  author={Prinzmetal, William and Gettleman, Laurie},
+  journal={Attention, Perception, \& Psychophysics},
+  volume={53},
+  number={1},
+  pages={81--88},
+  year={1993},
+  publisher={Springer}
+}
+@article{Blasius12,
+  title={Comparing Ranking Techniques in Web Surveys},
+  author={Blasius, J{\"o}rg},
+  journal={Field Methods},
+  volume={24},
+  number={4},
+  pages={382--398},
+  year={2012},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+@incollection{Fabbris13,
+  title={Measurement scales for scoring or ranking sets of interrelated items},
+  author={Fabbris, Luigi},
+  booktitle={Survey data collection and integration},
+  pages={21--43},
+  year={2013},
+  publisher={Springer}
+}
