--- a/gk.bib
+++ b/gk.bib
@@ -25478,3 +25478,36 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2013},
   publisher={Springer}
 }
+
+@techreport{DugSmi16,
+  author = {Duggan, Maeve and Smith, Aaron},
+  file = {:home/ariel/Dropbox (MIT)/mediapaper/LITREVIEW/PI{\_}2016.10.25{\_}Politics-and-Social- Media{\_}FINAL.pdf:pdf},
+  institution = {Pew Research Center},
+  title = {{The Political Environment on Social Media}},
+  url = {http://assets.pewresearch.org/wp-content/uploads/sites/14/2016/10/24160747/PI{\_}2016.10.25{\_}Politics-and-Social-Media{\_}FINAL.pdf},
+  year = {2016}
+}
+@misc{BarShe15,
+  author = {Barthel, Michael and Shearer, Elisa},
+  booktitle = {Pew Research Center FacTank},
+  title = {{How do Americans use Twitter for news?}},
+  url = {http://www.pewresearch.org/fact-tank/2015/08/19/how-do-americans-use-twitter-for-news/},
+  urldate = {2017-08-01},
+  year = {2015}
+}
+
+@incollection{LiuKli14,
+  title={The Tweets They Are a-Changin: Evolution of Twitter Users and Behavior.},
+  author={Liu, Yabing and Kliman-Silver, Chloe and Mislove, Alan},
+  booktitle={ICWSM},
+  volume={30},
+  pages={5--314},
+  year={2014}
+}
+
+@incollection{RecAra11,
+  title={How does social capital affect retweets?},
+  author={Recuero, Raquel and Araujo, Ricardo and Zago, Gabriela},
+  booktitle={ICWSM},
+  year={2011}
+}
