--- a/gk.bib
+++ b/gk.bib
@@ -25484,14 +25484,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   file = {:home/ariel/Dropbox (MIT)/mediapaper/LITREVIEW/PI{\_}2016.10.25{\_}Politics-and-Social- Media{\_}FINAL.pdf:pdf},
   institution = {Pew Research Center},
   title = {{The Political Environment on Social Media}},
-  url = {http://assets.pewresearch.org/wp-content/uploads/sites/14/2016/10/24160747/PI{\_}2016.10.25{\_}Politics-and-Social-Media{\_}FINAL.pdf},
+  url = {http://j.mp/PolEnvSM},
   year = {2016}
 }
 @misc{BarShe15,
   author = {Barthel, Michael and Shearer, Elisa},
   booktitle = {Pew Research Center FacTank},
   title = {{How do Americans use Twitter for news?}},
-  url = {http://www.pewresearch.org/fact-tank/2015/08/19/how-do-americans-use-twitter-for-news/},
+  url = {http://j.mp/AmTwNws},
   urldate = {2017-08-01},
   year = {2015}
 }
