--- a/gk.bib
+++ b/gk.bib
@@ -24493,10 +24493,33 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2011},
   publisher={Oxford University Press Oxford}
 }
-@article{Nelson11,
+
+@InCollection{,
+  author =       {},
+  title =        {},
+  booktitle =    {},
+  OPTcrossref =  {},
+  OPTkey =       {},
+  OPTpublisher = {},
+  OPTyear =      {},
+  OPTeditor =    {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTseries =    {},
+  OPTtype =      {},
+  OPTchapter =   {},
+  OPTpages =     {},
+  OPTedition =   {},
+  OPTmonth =     {},
+  OPTaddress =   {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
+@InCollection{Nelson11,
   title={Issue Framing},
   author={Thomas E.\ Nelson},
-  journal={The Oxford handbook of American public opinion and the media},
+  booktitle={The Oxford handbook of American public opinion and the media},
   pages={156--168},
   year={2011},
   publisher={Oxford University Press Oxford}
