--- a/gk.bib
+++ b/gk.bib
@@ -24393,7 +24393,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Acharya, Avidit and Blackwell, Matthew and Sen,
                   Maya},
   journal =      {American Political Science Review},
+  volume =       {110},
   month =        8,
+  issue =        {3},
   pages =        {1--18},
   year =         {2016}
 }
@@ -24419,10 +24421,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2009},
 }
 @Book{Hansen17,
-  author =    {Bruce E. Hansen},
+  author =       {Bruce E. Hansen},
   title =        {Econometrics},
+  url =          {http://j.mp/2yHLEL7},
   publisher =    {University of Wisconsin},
-  year =         2017}
+  year =         2017
+}
 
 @article{Hurlbert84,
   title =        {Pseudoreplication and the design of ecological field
@@ -24485,15 +24489,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2009},
   publisher =    {Cambridge University Press}
 }
-@article{VavIye11,
+@InCollection{VavIye11,
   title={The future of political communication research},
   author={Vavreck, Lynn and Iyengar, Shanto},
-  journal={The Oxford handbook of American public opinion and the media},
+  booktitle={The Oxford handbook of American public opinion and the media},
   pages={156--168},
   year={2011},
   publisher={Oxford University Press Oxford}
 }
-
 @InCollection{Nelson11,
   title={Issue Framing},
   author={Thomas E.\ Nelson},
@@ -24502,10 +24505,10 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2011},
   publisher={Oxford University Press Oxford}
 }
-@article{Gunnell11,
+@InCollection{Gunnell11,
   title={Democracy and the concept of public opinion},
   author={John G.\ Gunnell},
-  journal={The Oxford handbook of American public opinion and the media},
+  booktitle={The Oxford handbook of American public opinion and the media},
   pages={1--18},
   year={2011},
   publisher={Oxford University Press Oxford}
@@ -24592,6 +24595,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Rikhil R. Bhavnani and Gareth Nellis},
   title =        {Can Government-Controlled Media Cause Social Change?
                   Television and Fertility in India},
+  url=           {http://j.mp/2yIeZoL},
   note =         {University of Wisconsin},
   year =      2016}
   
@@ -24599,6 +24603,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   title =        {Economic and social impacts of the media},
   author =       {DellaVigna, Stefano and Ferrara, Eliana La},
   year =         {2015},
+  url =          {http://www.nber.org/papers/w21360}
   institution =  {National Bureau of Economic Research}
 }
 
@@ -24662,10 +24667,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   partisan media effects},
   author =       {Smith, Glen and Searles, Kathleen},
   journal =      {Public Opinion Quarterly},
-  pages =        {nft082},
-  year =         {2014},
-  publisher =    {AAPOR}
-}
+  pages =        {71--99},
+  year =         {2014}
+  }
 @article{ConMoe15,
   title={Moderation from bias: A field experiment on partisan media in a new democracy},
   author={Conroy-Krutz, Jeffrey and Moehler, Devra C},
@@ -24694,9 +24698,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Green, Donald P and Vavreck, Lynn},
   journal =      {Political Analysis},
   pages =        {138--152},
-  year =         {2008},
-  publisher =    {JSTOR}
-}
+  volume =       16,
+  year =         {2008}
+  }
 @article{Levendusky13,
   title =        {Why do partisan media polarize viewers?},
   author =       {Levendusky, Matthew S},
@@ -24725,6 +24729,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   Selective Exposure to Election Messages},
   author =       {Ryan, Timothy J and Brader, Ted},
   journal =      {Political Science Research and Methods},
+  url =          {https://doi.org/10.1017/psrm.2015.62},
   pages =        {1--21},
   year =         {2015},
   publisher =    {Cambridge Univ Press}
@@ -24911,11 +24916,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2009},
   publisher =    {Oxford University Press}
 }
-@techreport{AllGen17,
+@article{AllGen17,
   title =        {Social media and fake news in the 2016 election},
   author =       {Allcott, Hunt and Gentzkow, Matthew},
-  year =         {2017},
-  institution =  {National Bureau of Economic Research}
+  year =         2017,
+  journal =      {Journal of Economic Perspectives},
+  volume =       31,
+  number =       2,
+  pages =        {211--235}
 }
 @article{GerKarBer09,
   title =        {Does the media matter? A field experiment measuring
@@ -24942,6 +24950,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   coverage on perceptions of public sentiment},
   author =       {Mutz, Diana C and Soss, Joe},
   journal =      {Public Opinion Quarterly},
+  volume =       61,
   pages =        {431--451},
   year =         {1997},
   publisher =    {JSTOR}
@@ -25138,6 +25147,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Beauchamp, Nicholas},
   journal =      {American Journal of Political Science},
   year =         {2016},
+  volume =       {61},
+  number =       {2},
+  pages =        {490--503},
   publisher =    {Wiley Online Library}
 }
 
@@ -25498,17 +25510,22 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @incollection{LiuKli14,
-  title={The Tweets They Are a-Changin: Evolution of Twitter Users and Behavior.},
-  author={Liu, Yabing and Kliman-Silver, Chloe and Mislove, Alan},
-  booktitle={ICWSM},
-  volume={30},
-  pages={5--314},
-  year={2014}
+  title =        {The Tweets They Are a-Changin: Evolution of Twitter
+                  Users and Behavior.},
+  author =       {Liu, Yabing and Kliman-Silver, Chloe and Mislove,
+                  Alan},
+  year =         {2014},
+  booktitle =    {ICWSM},
+  volume =       {30},
+  pages =        {5--314}
 }
 
-@incollection{RecAra11,
-  title={How does social capital affect retweets?},
-  author={Recuero, Raquel and Araujo, Ricardo and Zago, Gabriela},
-  booktitle={ICWSM},
-  year={2011}
+@inproceedings{RecAra11,
+  title =        {How does social capital affect retweets?},
+  author =       {Recuero, Raquel and Araujo, Ricardo and Zago,
+                  Gabriela},
+  booktitle =    {Proceedings of the Fifth International AAAI
+                  Conference on Weblogs and Social Media},
+  url =          {http://j.mp/2yHTGng},
+  year =         {2011}
 }
