--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -108,10 +108,11 @@
 
 @Article{KinLamRob17,
   author =       {Gary King and Patrick Lam and Margaret E. Roberts},
-  title =        {Computer-Assisted Keyword and Document Set
-  Discovery from Unstructured Text},
+  title =        {Computer-Assisted Keyword and Document Set Discovery
+                  from Unstructured Text},
   journal =      {American Journal of Political Science},
   year =         {2017},
+  url =          {doi:10.1111/ajps.12291},
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
