--- a/gk.bib
+++ b/gk.bib
@@ -24595,9 +24595,10 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Rikhil R. Bhavnani and Gareth Nellis},
   title =        {Can Government-Controlled Media Cause Social Change?
                   Television and Fertility in India},
-  url=           {http://j.mp/2yIeZoL},
+  url =          {http://j.mp/2yIeZoL},
   note =         {University of Wisconsin},
-  year =      2016}
+  year =         2016
+}
   
 @techreport{DelLaF15,
   title =        {Economic and social impacts of the media},
