--- a/gk.bib
+++ b/gk.bib
@@ -24604,7 +24604,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   title =        {Economic and social impacts of the media},
   author =       {DellaVigna, Stefano and Ferrara, Eliana La},
   year =         {2015},
-  url =          {http://www.nber.org/papers/w21360},
+  url =          {http://j.mp/2yIkiVd},
   institution =  {National Bureau of Economic Research}
 }
 
