--- a/gk.bib
+++ b/gk.bib
@@ -24668,9 +24668,11 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   partisan media effects},
   author =       {Smith, Glen and Searles, Kathleen},
   journal =      {Public Opinion Quarterly},
+  volume =       {78},
+  issue =        {1},
   pages =        {71--99},
   year =         {2014}
-  }
+}
 @article{ConMoe15,
   title={Moderation from bias: A field experiment on partisan media in a new democracy},
   author={Conroy-Krutz, Jeffrey and Moehler, Devra C},
@@ -24732,6 +24734,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   journal =      {Political Science Research and Methods},
   url =          {https://doi.org/10.1017/psrm.2015.62},
   pages =        {1--21},
+  volume={1},
   year =         {2015},
   publisher =    {Cambridge Univ Press}
 }
@@ -25492,30 +25495,28 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2013},
   publisher={Springer}
 }
-
 @techreport{DugSmi16,
-  author = {Duggan, Maeve and Smith, Aaron},
-  file = {:home/ariel/Dropbox (MIT)/mediapaper/LITREVIEW/PI{\_}2016.10.25{\_}Politics-and-Social- Media{\_}FINAL.pdf:pdf},
-  institution = {Pew Research Center},
-  title = {{The Political Environment on Social Media}},
-  url = {j.mp/PolEnvSM},
-  year = {2016}
+  author =       {Duggan, Maeve and Smith, Aaron},
+  institution =  {Pew Research Center},
+  title =        {{The Political Environment on Social Media}},
+  url =          {j.mp/PolEnvSM},
+  year =         {2016}
 }
 @misc{BarShe15,
-  author = {Barthel, Michael and Shearer, Elisa},
-  booktitle = {Pew Research Center FacTank},
-  title = {{How do Americans use Twitter for news?}},
-  url = {j.mp/AmTwNws},
-  urldate = {2017-08-01},
-  year = {2015}
+  author =       {Barthel, Michael and Shearer, Elisa},
+  booktitle =    {Pew Research Center FacTank},
+  year =         {2015},
+  title =        {How do Americans use Twitter for news?},
+  url =          {j.mp/AmTwNws}
 }
 
 @incollection{LiuKli14,
   title =        {The Tweets They Are a-Changin: Evolution of Twitter
-                  Users and Behavior.},
+                  Users and Behavior},
   author =       {Liu, Yabing and Kliman-Silver, Chloe and Mislove,
                   Alan},
   year =         {2014},
+  url =          {http://j.mp/2yIqnRu},
   booktitle =    {ICWSM},
   volume =       {30},
   pages =        {5--314}
