--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -365,7 +365,7 @@ pages={1037--1060},
   year = 	 2010,
   volume =	 8,
   number =	 19,
-  note =	 {http://gking.harvard.edu/files/abs/desva-abs.shtml}
+  note =	 {http://j.mp/DAutopsy}
 }
 
 @article{LazPenAda09,
