--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1959,6 +1959,16 @@ pages={1037--1060},
 % Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@data{KinSchWhi17,
+  author =       {King, Gary and Schneer, Benjamin and White, Ariel},
+  publisher =    {Harvard Dataverse},
+  title =        {Replication Data for: How the News Media Activates
+                  Public Expression and Influences National Agendas},
+  year =         {2017},
+  doi =          {10.7910/DVN/1EMHTK},
+  url =          {http://dx.doi.org/10.7910/DVN/1EMHTK}
+}
+
 @data{KinPanRob17,
   author =       {King, Gary and Jennifer Pan and Margaret E. Roberts},
   title =        {Replication data for: How the Chinese Government
