--- a/gk.bib
+++ b/gk.bib
@@ -25531,3 +25531,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   url =          {http://j.mp/2yHTGng},
   year =         {2011}
 }
+
+@Misc{ssm,
+  title =     {See Supplementary Materials}}
+
