--- a/gk.bib
+++ b/gk.bib
@@ -25535,3 +25535,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @Misc{ssm,
   title =     {See Supplementary Materials}}
 
+@inproceedings{PenSocMan14,
+  title =        {Glove: Global vectors for word representation},
+  author =       {Pennington, Jeffrey and Socher, Richard and Manning,
+                  Christopher},
+  booktitle =    {Proceedings of the 2014 conference on empirical
+                  methods in natural language processing (EMNLP)},
+  pages =        {1532--1543},
+  year =         {2014}
+}
