added vr for class cites

--- a/gk.bib
+++ b/gk.bib
@@ -25544,3 +25544,65 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {1532--1543},
   year =         {2014}
 }
+
+@article{UmbWeiZuk97,
+author = {Umbaugh, S.E. and Wei, Y.S. and Zuke, M.},
+doi = {10.1109/51.603650},
+journal = {IEEE Engineering in Medicine and Biology Magazine},
+number = {4},
+pages = {62--73},
+title = {{Feature extraction in image analysis. A program for facilitating data reduction in medical image classification}},
+url = {http://ieeexplore.ieee.org/document/603650/},
+volume = {16},
+year = {1997}
+}
+
+@article{Boulesteix04,
+abstract = {},
+author = {Boulesteix, Anne-Laure},
+doi = {10.2202/1544-6115.1075},
+journal = {Statistical Applications in Genetics and Molecular Biology},
+month = {jan},
+number = {1},
+pages = {1--30},
+publisher = {De Gruyter},
+title = {{PLS Dimension Reduction for Classification with Microarray Data}},
+url = {https://www.degruyter.com/view/j/sagmb.2004.3.issue-1/sagmb.2004.3.1.1075/sagmb.2004.3.1.1075.xml},
+volume = {3},
+year = {2004}
+}
+
+@article{BruEri00,
+author = {Brunzell, H. and Eriksson, J.},
+doi = {10.1016/S0031-3203(99)00142-9},
+journal = {Pattern Recognition},
+number = {10},
+pages = {1741--1748},
+publisher = {Pergamon},
+title = {{Feature reduction for classification of multidimensional data}},
+url = {http://www.sciencedirect.com.ezp-prod1.hul.harvard.edu/science/article/pii/S0031320399001429},
+volume = {33},
+year = {2000}
+}
+@article{VinLarLaj0,
+author = {Vincent, Pascal and Larochelle, Hugo and Lajoie, Isabelle and Bengio, Yoshua and Manzagol, Pierre-Antoine},
+file = {:Users/cjerzak/Library/Application Support/Mendeley Desktop/Downloaded/Vincent et al. - 2010 - Stacked Denoising Autoencoders Learning Useful Representations in a Deep Network with a Local Denoising Criterio.pdf:pdf},
+journal = {Journal of Machine Learning Research},
+number = {Dec},
+pages = {3371--3408},
+title = {{Stacked Denoising Autoencoders: Learning Useful Representations in a Deep Network with a Local Denoising Criterion}},
+url = {http://www.jmlr.org/papers/v11/vincent10a.html},
+volume = {11},
+year = {2010}
+}
+
+@article{VanHin08,
+abstract = {},
+author = {{Van Der Maaten}, Laurens and Hinton, Geoffrey},
+journal = {Journal of Machine Learning Research},
+pages = {2579--2605},
+title = {{Visualizing Data using t-SNE}},
+url = {http://www.jmlr.org/papers/volume9/vandermaaten08a/vandermaaten08a.pdf},
+volume = {9},
+year = {2008}
+}
