--- a/gk.bib
+++ b/gk.bib
@@ -25552,7 +25552,7 @@ journal = {IEEE Engineering in Medicine and Biology Magazine},
 number = {4},
 pages = {62--73},
 title = {{Feature extraction in image analysis. A program for facilitating data reduction in medical image classification}},
-url = {http://ieeexplore.ieee.org/document/603650/},
+url = {http://bit.ly/2yfiDtR},
 volume = {16},
 year = {1997}
 }
@@ -25567,7 +25567,7 @@ number = {1},
 pages = {1--30},
 publisher = {De Gruyter},
 title = {{PLS Dimension Reduction for Classification with Microarray Data}},
-url = {https://www.degruyter.com/view/j/sagmb.2004.3.issue-1/sagmb.2004.3.1.1075/sagmb.2004.3.1.1075.xml},
+url = {http://bit.ly/2z2sqTe},
 volume = {3},
 year = {2004}
 }
@@ -25580,18 +25580,17 @@ number = {10},
 pages = {1741--1748},
 publisher = {Pergamon},
 title = {{Feature reduction for classification of multidimensional data}},
-url = {http://www.sciencedirect.com.ezp-prod1.hul.harvard.edu/science/article/pii/S0031320399001429},
+url = {http://bit.ly/2ihoYdl},
 volume = {33},
 year = {2000}
 }
 @article{VinLarLaj10,
 author = {Vincent, Pascal and Larochelle, Hugo and Lajoie, Isabelle and Bengio, Yoshua and Manzagol, Pierre-Antoine},
-file = {:Users/cjerzak/Library/Application Support/Mendeley Desktop/Downloaded/Vincent et al. - 2010 - Stacked Denoising Autoencoders Learning Useful Representations in a Deep Network with a Local Denoising Criterio.pdf:pdf},
 journal = {Journal of Machine Learning Research},
 number = {Dec},
 pages = {3371--3408},
 title = {{Stacked Denoising Autoencoders: Learning Useful Representations in a Deep Network with a Local Denoising Criterion}},
-url = {http://www.jmlr.org/papers/v11/vincent10a.html},
+url = {http://bit.ly/2gPcedw},
 volume = {11},
 year = {2010}
 }
@@ -25601,8 +25600,8 @@ abstract = {},
 author = {{Van Der Maaten}, Laurens and Hinton, Geoffrey},
 journal = {Journal of Machine Learning Research},
 pages = {2579--2605},
-title = {{Visualizing Data using t-SNE}},
-url = {http://www.jmlr.org/papers/volume9/vandermaaten08a/vandermaaten08a.pdf},
+title = {Visualizing Data using t-SNE},
+url = {http://bit.ly/2xBnFMH},
 volume = {9},
 year = {2008}
 }
