--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -426,12 +426,12 @@ pages={1037--1060},
 }
 
 @Article{IacKinPor11c,
-  author =	 {Stefano M. Iacus and Gary King and Giuseppe Porro},
-  title =	 {Causal Inference Without Balance Checking: Coarsened
+  author =       {Stefano M. Iacus and Gary King and Giuseppe Porro},
+  title =        {Causal Inference Without Balance Checking: Coarsened
                   Exact Matching},
-  journal =	 {Political Analysis},
-  year =	 {2011},
-  note =	 {{http://gking.harvard.edu/files/abs/cem-plus-abs.shtml}}
+  journal =      {Political Analysis},
+  year =         {2011},
+  URL =          {http://j.mp/2zvwwUD}
 }
 
 @article{ImaKinStu08,
