--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -431,7 +431,7 @@ pages={1037--1060},
                   Exact Matching},
   journal =      {Political Analysis},
   year =         {2011},
-  URL =          {http://j.mp/2zvwwUD}
+  URL =          {http://j.mp/woCheck}
 }
 
 @article{ImaKinStu08,
