--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2551,3 +2551,14 @@ pages={1037--1060},
   pages =        {473--489},
   year =         {2017}
 }
+@Unpublished{JerKinStr17,
+  author =       {Connor T. Jerzak and Gary King and Anton Strezhnev},
+  title =        {An Improved Method of Automated Nonparametric
+                  Content Analysis for Social Science},
+  note =         {},
+  OPTkey =       {},
+  OPTmonth =     {},
+  OPTyear =      {},
+  OPTannote =    {}
+}
+
