--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2558,7 +2558,7 @@ pages={1037--1060},
   note =         {},
   OPTkey =       {},
   OPTmonth =     {},
-  OPTyear =      {},
+  OPTyear =      {2017},
   OPTannote =    {}
 }
 
