--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2555,10 +2555,6 @@ pages={1037--1060},
   author =       {Connor T. Jerzak and Gary King and Anton Strezhnev},
   title =        {An Improved Method of Automated Nonparametric
                   Content Analysis for Social Science},
-  note =         {},
-  OPTkey =       {},
-  OPTmonth =     {},
-  OPTyear =      {2017},
-  OPTannote =    {}
-}
+  note =         {Manuscript},
+  year =      2017}
 
