--- a/gk.bib
+++ b/gk.bib
@@ -24260,9 +24260,10 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @article{Firat16,
   title={Unified Framework for Quantification},
   author={Firat, Aykut},
-  journal={arXiv preprint arXiv:1606.00868},
+  journal={arXiv:1606.00868},
   year={2016}
 }
+
 @article{BucGar66,
   title =        {Comparison of a Screening Test and a Reference Test
                   in Epidemiologic Studies. I. Indices of Agreements
