--- a/gk.bib
+++ b/gk.bib
@@ -25553,7 +25553,7 @@ journal = {IEEE Engineering in Medicine and Biology Magazine},
 number = {4},
 pages = {62--73},
 title = {{Feature extraction in image analysis. A program for facilitating data reduction in medical image classification}},
-url = {http://bit.ly/2yfiDtR},
+url = {bit.ly/2yfiDtR},
 volume = {16},
 year = {1997}
 }
@@ -25568,7 +25568,7 @@ number = {1},
 pages = {1--30},
 publisher = {De Gruyter},
 title = {{PLS Dimension Reduction for Classification with Microarray Data}},
-url = {http://bit.ly/2z2sqTe},
+url = {bit.ly/2z2sqTe},
 volume = {3},
 year = {2004}
 }
@@ -25581,19 +25581,23 @@ number = {10},
 pages = {1741--1748},
 publisher = {Pergamon},
 title = {{Feature reduction for classification of multidimensional data}},
-url = {http://bit.ly/2ihoYdl},
+url = {bit.ly/2ihoYdl},
 volume = {33},
 year = {2000}
 }
 @article{VinLarLaj10,
-author = {Vincent, Pascal and Larochelle, Hugo and Lajoie, Isabelle and Bengio, Yoshua and Manzagol, Pierre-Antoine},
-journal = {Journal of Machine Learning Research},
-number = {Dec},
-pages = {3371--3408},
-title = {{Stacked Denoising Autoencoders: Learning Useful Representations in a Deep Network with a Local Denoising Criterion}},
-url = {http://bit.ly/2gPcedw},
-volume = {11},
-year = {2010}
+  author =       {Vincent, Pascal and Larochelle, Hugo and Lajoie,
+                  Isabelle and Bengio, Yoshua and Manzagol,
+                  Pierre-Antoine},
+  journal =      {Journal of Machine Learning Research},
+  number =       {Dec},
+  pages =        {3371--3408},
+  title =        {{Stacked Denoising Autoencoders: Learning Useful
+                  Representations in a Deep Network with a Local
+                  Denoising Criterion}},
+  url =          {bit.ly/2gPcedw},
+  volume =       {11},
+  year =         {2010}
 }
 
 @article{VanHin08,
@@ -25605,4 +25609,12 @@ title = {Visualizing Data using t-SNE},
 url = {http://bit.ly/2xBnFMH},
 volume = {9},
 year = {2008}
+}
+@incollection{Leamer10,
+  title={Extreme bounds analysis},
+  author={Leamer, Edward E},
+  booktitle={Microeconometrics},
+  pages={49--52},
+  year={2010},
+  publisher={Springer}
 }
