--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -337,15 +337,14 @@ pages={1037--1060},
 }
 
 @Article{IacKinPor11,
-  author =	 {Stefano M. Iacus and Gary King and Giuseppe Porro},
-  title =	 {Multivariate Matching Methods that are Monotonic
+  author =       {Stefano M. Iacus and Gary King and Giuseppe Porro},
+  title =        {Multivariate Matching Methods that are Monotonic
                   Imbalance Bounding},
-  journal =	 {Journal of the American Statistical Association},
-  volume =	 106,
-  pages =	 {345--361},
-  year =	 2011,
-  note =
-                  {{http://gking.harvard.edu/files/abs/cem-math-abs.shtml}}
+  journal =      {Journal of the American Statistical Association},
+  volume =       106,
+  pages =        {345--361},
+  year =         2011,
+  URL =          {http://j.mp/matchMIB}
 }
 
 @article{HopKin10,
@@ -447,15 +446,15 @@ pages={1037--1060},
 }
 
 @article{KinLu08,
-  author =	 {Gary King and Ying Lu},
-  title =	 {Verbal Autopsy Methods with Multiple Causes of
+  author =       {Gary King and Ying Lu},
+  title =        {Verbal Autopsy Methods with Multiple Causes of
                   Death},
-  journal =	 {Statistical Science},
-  volume =	 {23},
-  number =	 {1},
-  year =	 {2008},
-  pages =	 {78--91},
-  note =	 {{http://gking.harvard.edu/files/abs/vamc-abs.shtml}}
+  journal =      {Statistical Science},
+  volume =       {23},
+  number =       {1},
+  year =         {2008},
+  pages =        {78--91},
+  url =          {j.mp/2AuA8aN}
 }
 
 @article{AltKin07,
@@ -2521,6 +2520,7 @@ pages={1037--1060},
   title =        {System for estimating a distribution of message
                   content categories in source data},
   number =       {US Patent 8,180,717},
+  url =          {j.mp/VApatent},
   year =         2012
 }
 @Patent{FirBroBin16,
@@ -2536,7 +2536,7 @@ pages={1037--1060},
   title =        {Why Propensity Scores Should Not Be Used for
                   Matching},
   author =       {King, Gary and Richard A. Nielsen},
-  url =          {http://jmp/1sexgVw},
+  url =          {http://j.mp/PSMnot},
   note =         {Working Paper},
   year =         {2017}
 }
@@ -2557,4 +2557,19 @@ pages={1037--1060},
                   Content Analysis for Social Science},
   note =         {Manuscript},
   year =      2017}
+
+@article {GilKinPet16,
+  title =        {Comment on {\textquoteright}Estimating the
+                  Reproducibility of Psychological
+                  Science{\textquoteright}},
+  journal =      {Science},
+  volume =       {351},
+  number =       {6277},
+  year =         {2016},
+  pages =        {1037a-1038a},
+  url =          {j.mp/openrepl},
+  author =       {Gilbert, Daniel and Gary King and Stephen Pettigrew
+                  and Timothy Wilson}
+}
+
 
