--- a/gk.bib
+++ b/gk.bib
@@ -20682,7 +20682,7 @@ journal = {Science}
   note =	 {http://j.mp/JvzQQE, April 30th edition}
 }
 
-@Article{Leamer10,
+@Article{Leamer10b,
   author = 	 {Edward E. Leamer},
   title = 	 {Tantalus on the Road to Asymptopia},
   journal = 	 {Journal of Economic Perspectives},
